--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,7 @@ dependencies:
   flutter_pcm_sound: ^3.1.7
   app_settings: ^6.1.1
   file_picker: ^10.2.0
+  pager: ^0.0.6
 
 dev_dependencies:
   flutter_test:
